<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/utamaLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/card_background" >

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/shoppy_logo" />

    <customfonts.MyTextView
        android:id="@+id/txtNoSertifikat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/imgPreview"
        android:layout_toRightOf="@id/imgPreview"
        android:text="@string/no_reg"
        android:textColor="@color/oil"
        android:textSize="16sp" />

    <customfonts.MyTextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtNoSertifikat"
        android:layout_toRightOf="@+id/imgPreview"
        android:text="@string/nama_peserta"
        android:textColor="@color/oil" />

    <customfonts.MyTextView
        android:id="@+id/txtTempatTglLahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtNama"
        android:layout_toRightOf="@+id/imgPreview"
        android:text="@string/tempat_tanggal_lahir"
        android:textColor="@color/oil" />

    <customfonts.MyTextView
        android:id="@+id/txtPengProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTempatTglLahir"
        android:layout_toRightOf="@+id/imgPreview"
        android:text="@string/peng_prov"
        android:textColor="@color/oil" />
    
	</RelativeLayout>

</RelativeLayout>