<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UselessParent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

<WebView
    android:layout_below="@+id/toolbar"
    android:id="@+id/webView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@+id/loadMask" />

<ProgressBar
    android:id="@+id/pgbarLoading"
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

<LinearLayout
    android:id="@+id/loadMask"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_alignParentBottom="true"
    android:background="#80000000"
    android:orientation="vertical"
    android:visibility="gone" >

    <customfonts.MyTextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/periksa_koneksi"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_lightgray"
        android:text="@string/coba_lagi"
        android:textColor="@color/white" />

</LinearLayout>

</RelativeLayout>
