<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@null" >

    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@array/nav_drawer_icons"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:scaleType="center" />

    <ImageView
        android:id="@+id/imgSetupUjian"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@+id/btnback"
        android:contentDescription="@string/nama_club"
        android:src="@mipmap/ic_launcher" />

    <customfonts.MyTextView
        android:id="@+id/txtNama_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgSetupUjian"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imgSetupUjian"
        android:text="@string/nama_club"
        android:textColor="#fff"
        android:textSize="18sp" />

    <customfonts.MyTextView
        android:id="@+id/txtPeriode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNama_club"
        android:layout_below="@+id/txtNama_club"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/imgSetupUjian"
        android:text="@string/periode"
        android:textColor="#fff"
        android:textSize="14sp" />

</RelativeLayout>