<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@null" >

    <RelativeLayout
        android:id="@+id/layout_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/curve_shap_up"
        android:padding="5dp" >
	    
        <customfonts.MyTextView
            android:id="@+id/text_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
			android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/kirim_laporan" />

	</RelativeLayout>

	<RelativeLayout
	    android:id="@+id/layout_down"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/layout_up"
	    android:background="@drawable/curve_shap_down"
	    android:paddingBottom="20dp" >

	    <customfonts.MyTextView
	        android:id="@+id/text_dialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="20dp"
	        android:gravity="center_horizontal"
	        android:text="@string/isi_laporan"
	        android:textColor="@color/text_msg_input"
	        android:textSize="18sp"
	        android:textStyle="bold" />

		<customfonts.MyEditText
			android:id="@+id/text_laporan"
			android:layout_width="match_parent"
			android:layout_height="70dp"
			android:layout_below="@+id/text_dialog"
			android:layout_centerHorizontal="true"
			android:layout_margin="10dp"
			android:gravity="left|top"
			android:textColor="@color/text_msg_input"
			android:inputType="textMultiLine"
			tools:ignore="RtlHardcoded" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/text_laporan"
	        android:layout_centerHorizontal="true"
	        android:orientation="horizontal"
			android:layout_margin="10dp">

	    	<Button
			    android:id="@+id/btn_no"
			    style="?android:textAppearanceSmall"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
			    android:background="@drawable/btn_red"
			    android:text="@string/batal"
			    android:textColor="@color/white"
			    android:textStyle="bold"
				android:layout_weight="1"
				tools:ignore="RtlHardcoded" />

	        <Button
	            android:id="@+id/btn_yes"
	            style="?android:textAppearanceSmall"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
	            android:background="@drawable/btn_red"
	            android:text="@string/kirim"
	            android:textColor="@color/white"
	            android:textStyle="bold"
				android:layout_weight="1"
				tools:ignore="RtlHardcoded" />

	    </LinearLayout>


	</RelativeLayout>
</RelativeLayout>